# AutoZoom

./: .gitignore  README.md  STEP_01_find_zoom_info_csv.py  STEP_02_make_zoomed_video.py  pyproject.toml
heatmap_outputs_2/: STEP_01_video_heatmap_analyzer.py
